html should be done

--- a/index.html
+++ b/index.html
@@ -33,62 +33,62 @@
 
         <div class="column">
             <figure>  
-                <img src="images/Chile.png" alt="a sunset on the beach">
+                <img src="images/Chile.png" alt="a sunset on the beach" width="420" height="282">
                 <figcaption>Chile, 2001</figcaption>
             </figure>  
 
             <figure>
-                <img src="images/Guatemala.png" alt="a valley of purple flowers with mountains in the background">
+                <img src="images/Guatemala.png" alt="a valley of purple flowers with mountains in the background" width="420" height="280">
                 <figcaption>Guatemala, 1997</figcaption>
             </figure>
 
             <figure>
-                <img src="images/Hawaii.png" alt="the island of hawaii">
+                <img src="images/Hawaii.png" alt="the island of hawaii" width="421" height="281">
                 <figcaption>Hawaii, 2010</figcaption>
             </figure>
 
             <figure>
-                <img src="images/Iran.png" alt="a field of plants and mountains in the background with the sunrise">
+                <img src="images/Iran.png" alt="a field of plants and mountains in the background with the sunrise" width="420" height="630">
                 <figcaption>Iran, 1999</figcaption>
             </figure>
 
             <figure>
-                <img src="images/Ireland.png" alt="a green forestry area  with green hills and trees">
+                <img src="images/Ireland.png" alt="a green forestry area  with green hills and trees" width="420" height="630">
                 <figcaption>Ireland, 2012</figcaption>
             </figure>
 
             <figure>
-                <img src="images/Moab-Desert.png" alt="the view of a lake and mountains, a person is in a canoe on the lake">
+                <img src="images/Italy.png" alt="the view of a lake and mountains, a person is in a canoe on the lake" width="420" height="630">
                 <figcaption>Italy, 2015</figcaption>
             </figure>
 
             <figure>
-                <img src="images/Moab-Desert.png" alt="shows a canyon and the sun glinting in the sky">
+                <img src="images/Moab-Desert.png" alt="shows a canyon and the sun glinting in the sky" width="420" height="281">
                 <figcaption>Moab Desert, 2020</figcaption>
             </figure>
 
             <figure>
-                <img src="images/Rocky-Mountains.png" alt="mountains of rocks with the ocean right behind it">
+                <img src="images/Rocky-Mountains.png" alt="mountains of rocks with the ocean right behind it" width="420" height="281">
                 <figcaption>Rocky Mountains, 2009</figcaption>
             </figure>
 
             <figure>
-                <img src="images/Switzerland.png" alt="a snowed cover mountain with pines and mountains in the background">
+                <img src="images/Switzerland.png" alt="a snowed cover mountain with pines and mountains in the background" width="420" height="280">
                 <figcaption>Switzerland, 2014</figcaption>
             </figure>
 
             <figure>
-                <img src="images/UK.png" alt="a yellowish/green valley with roll of hills">
+                <img src="images/UK.png" alt="a yellowish/green valley with roll of hills" width="420" height="281"> 
                 <figcaption>UK, 2005</figcaption>
             </figure>
 
             <figure>
-                <img src="images/USA.png" alt="a field of red and yellow tulips with hills in the background">
+                <img src="images/USA.png" alt="a field of red and yellow tulips with hills in the background" width="420" height="280">
                 <figcaption>USA, 2021</figcaption>
             </figure>
 
             <figure>
-                <img src="images/Wyoming.png" alt="a lake with pines behind, and mountains in the back of it">
+                <img src="images/Wyoming.png" alt="a lake with pines behind, and mountains in the back of it" width="420" height="280">
                 <figcaption>Wyoming, 2021</figcaption>
             </figure>
         </div>
@@ -115,7 +115,7 @@
     </main>
     
     <footer>
-        <p>Copyright 2021 TK Photography</p>
+        <p><small>Copyright 2021 TK Photography</small></p>
     </footer>
 
 </body>
