--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <section id="contact">
             <h2>Contact</h2>
                 <p>Please fill out this form and I'll connect with you soon.</p>
-            <form action="https://wp.zybooks.com/form-viewer.php" method="POST" target="_blank">
+            <form action="#" method="POST" target="_blank">
 
                 <label for="my-name">Name</label>
                 <input type="text" name="my-name" id="my-name" placeholder="Your full name">
@@ -108,7 +108,7 @@
                 <label for="my-comments">Comments</label>
                 <input type="text" name="my-comments" id="my-comments" placeholder="What can I help you with?">
                 
-                <input type="submit" name="my-submit" id="my-submit" value="Submit Form">
+                <input type="submit" name="my-submit" id="my-submit" value="Submit">
             </form>
         </section>
     </main>
